apps/gotty/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: gotty
  labels:
    app.kubernetes.io/name: gotty
