apps/gotty/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gotty
  namespace: gotty
  labels:
    app: gotty
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gotty
  template:
    metadata:
      labels:
        app: gotty
    spec:
      serviceAccountName: gotty
      containers:
        - name: gotty
          image: alpine:3.22.1
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          command:
            - /bin/sh
            - -c
            - |
              [...]
          volumeMounts:
            - name: tools
              mountPath: /tools
              readOnly: true
            - name: home
              mountPath: /home/gotty
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 15
            periodSeconds: 30
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
      volumes:
        - name: tools
          emptyDir: {}
        - name: home
          emptyDir: {}
