apps/gotty/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gotty
  namespace: gotty
  labels:
    app: gotty
spec:
  type: ClusterIP
  selector:
    app: gotty
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
